Beta v2.0.5.6.3 - Fixed errors found in 1.8 caused by previous updates. - Permission: 'none' now correctly sets the permission to null.